[package]
name = "actix0"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.8.0"
actix-http = "2"
env_logger = "0.8"
markx = '0.1.1'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["unstable-locales", "serde"]}
actix-files = "0.5.0"